Fix autoIp and GeoLocal

--- a/index.html
+++ b/index.html
@@ -17,12 +17,16 @@
         <div class="col s12 m6 offset-m3 ">
           <div id="mainWeather" class="card ">
             <div class="card-content">
+
               <h1 id="w-locationCity" style="display: inline-block"></h1>
               <h4 id="w-locationCountry" style="color:red ;display: inline-block"></h1>
-              <h3 id="w-temp">30</h3>
-              <img id="w-icon">
+<div>
+<img id="w-icon">
+  <h3 id="w-temp" style= "display: inline-block"></h3></div>
 
-            
+
+
+
 
             </div>
           </div>
